--- a/cos.bib
+++ b/cos.bib
@@ -5,6 +5,26 @@
   publisher={Cambridge University Press}
 }
 
+@inproceedings{BKP15,
+  title={Diamond sampling for approximate maximum all-pairs dot-product (mad) search},
+  author={Ballard, Grey and Kolda, Tamara G and Pinar, Ali and Seshadhri, C},
+  booktitle={Data Mining (ICDM), 2015 IEEE International Conference on},
+  pages={11--20},
+  year={2015},
+  organization={IEEE}
+}
+
+@article{CL99,
+  title={Approximating matrix multiplication for pattern recognition tasks},
+  author={Cohen, Edith and Lewis, David D},
+  journal={Journal of Algorithms},
+  volume={30},
+  number={2},
+  pages={211--252},
+  year={1999},
+  publisher={Elsevier}
+}
+
 @inproceedings{TEL11,
   title={No free lunch: brute force vs. locality-sensitive hashing for cross-lingual pairwise similarity},
   author={Ture, Ferhan and Elsayed, Tamer and Lin, Jimmy},
